--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         }
     ],
     "require": {
-        "php": ">=7.2"
+        "php": ">=8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~8.2.4",
-        "twig/twig": "~2.11.3",
+        "phpunit/phpunit": "^9.0",
+        "twig/twig": "~3.4.3",
         "liquid/liquid": "1.4.15"
     },
     "suggest": {
