--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         }
     ],
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "twig/twig": "~3.4.3",
-        "liquid/liquid": "1.4.15"
+        "phpunit/phpunit": "^10.0",
+        "twig/twig": "^3.7",
+        "liquid/liquid": "~1.4.39"
     },
     "suggest": {
         "twig/twig": "To bridge with Twig template engine",
